# quantum-ai-lab

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: architecture.md
quantum_algorithms/: __init__.py  deutsch_jozsa.py  grover.py  qft.py  shor.py
quantum_chaos/: __init__.py  kicked_top.py  level_spacing.py  lyapunov.py
quantum_crypto/: __init__.py  bb84.py  e91.py  quantum_otp.py
quantum_ml/: README.md  __init__.py  qkernel.py  quantum_neural_net.py  variational_classifier.py
quantum_ml/examples/: __init__.py
quantum_optimization/: __init__.py  max_cut.py  qaoa.py  vqe.py
quantum_rl/: __init__.py  hybrid_agent.py  quantum_environment.py  quantum_policy.py
quantum_simulation/: __init__.py  hubbard_model.py  ising_model.py  trotter.py
quantum_vision/: __init__.py  hybrid_classifier.py  quantum_encoder.py  quanvolution.py
